--- a/index.html
+++ b/index.html
@@ -120,14 +120,19 @@
         margin-bottom: 8px;
         position: relative;
       }
+      ul {
+        padding-left: 1.5rem;
+        margin-bottom: 30px;
+        list-style-type: disc; /* ensures round bullets */
+      }
 
-      ul li::before {
+      /* ul li::before {
         content: "•";
         color: #854d27;
         font-size: 1.2rem;
         position: absolute;
         left: -20px;
-      }
+      } */
 
       .nutrition p {
         font-size: 0.95rem;
@@ -137,7 +142,7 @@
 
       .nutrition-table {
         display: grid;
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr;
         gap: 15px;
         padding: 0 20px;
       }
@@ -222,9 +227,9 @@
           <div class="prep-time">
             <h3>Preparation time</h3>
             <ul>
-              <li>Total: Approximately 10 minutes</li>
-              <li>Preparation: 5 minutes</li>
-              <li>Cooking: 5 minutes</li>
+              <li><b>Total</b>: Approximately 10 minutes</li>
+              <li><b>Preparation</b>: 5 minutes</li>
+              <li><b>Cooking</b>: 5 minutes</li>
             </ul>
           </div>
 
@@ -242,30 +247,32 @@
           <h2>Instructions</h2>
           <ol>
             <li>
-              Beat the eggs: In a bowl, beat the eggs with a pinch of salt and
-              pepper until they are well mixed. You can add a tablespoon of
-              water or milk for a fluffier texture.
+              <b>Beat the eggs</b>: In a bowl, beat the eggs with a pinch of
+              salt and pepper until they are well mixed. You can add a
+              tablespoon of water or milk for a fluffier texture.
             </li>
             <li>
-              Heat the pan: Place a non-stick frying pan over medium heat and
-              add butter or oil.
+              <b>Heat the pan</b>: Place a non-stick frying pan over medium heat
+              and add butter or oil.
             </li>
             <li>
-              Cook the omelette: Once the butter is melted and bubbling, pour in
-              the eggs. Tilt the pan to ensure the eggs evenly coat the surface.
+              <b>Cook the omelette</b>: Once the butter is melted and bubbling,
+              pour in the eggs. Tilt the pan to ensure the eggs evenly coat the
+              surface.
             </li>
             <li>
-              Add fillings (optional): When the eggs begin to set at the edges
-              but are still slightly runny in the middle, sprinkle your chosen
-              fillings over one half of the omelette.
+              <b>Add fillings (optional)</b>: When the eggs begin to set at the
+              edges but are still slightly runny in the middle, sprinkle your
+              chosen fillings over one half of the omelette.
             </li>
             <li>
-              Fold and serve: As the omelette continues to cook, carefully lift
-              one edge and fold it over the fillings. Let it cook for another
-              minute, then slide it onto a plate.
+              <b>Fold and serve</b>: As the omelette continues to cook,
+              carefully lift one edge and fold it over the fillings. Let it cook
+              for another minute, then slide it onto a plate.
             </li>
             <li>
-              Enjoy: Serve hot, with additional salt and pepper if needed.
+              <b>Enjoy</b>: Serve hot, with additional salt and pepper if
+              needed.
             </li>
           </ol>
 
@@ -298,10 +305,14 @@
 
     <footer>
       Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      <a
+        href="https://www.frontendmentor.io?ref=challenge"
+        target="_blank"
+        rel="noopener"
         >Frontend Mentor</a
       >. Coded by
-      <a href="https://github.com/Eseoghene94">Eseoghene aka CODEwithESE</a>.
+      <a href="https://www.github.com/Eseoghene94">Eseoghene aka CODEwithESE</a
+      >.
     </footer>
   </body>
 </html>
